# scout-scripts

./: Untitled-1.txt  activities.csv  attendance_sheet.ipynb  create_advancement_sheets.py  extract_scout_info.py  out.html  pyproject.toml  scout_info.ipynb  sd_advancement_nb.ipynb  working_script.py
Scraper/: data.html
reports/: parse_scout_info.py
reports/reports/: reports.ipynb
reports/reports/data/: badges.tsv  event_summary.tsv  events.tsv  scouts.tsv
