[tool.poetry]
name = "scoutscripts"
version = "0.1.0"
description = ""
authors = ["Daniel Le Jeune <daniel.h.lejeune@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
jupyter = "^1.1.1"
typer = "^0.15.1"
polars = "^1.20.0"
matplotlib = "^3.10.0"
plotnine = "^0.14.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
