[tool.poetry]
name = "scout-scripts"
version = "0.1.0"
description = ""
authors = ["Daniel Le Jeune <daniel.h.lejeune@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
xlsxwriter = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
